---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 03-07-2022
  Minor Features:
    - Store screenshots in a sub-directory if the camera name contains a slash.
    - Added an always daylight toggle to cameras  (Thanks drdozer)
  Bugfixes:
    - Each camera must have its own sequential numbering when enabled.

---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 11-12-2021
  Bugfixes:
    - Fix smooth zooming when user changed active tracker.

---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 27-07-2021
  GUI:
    - Improve max-zoom message and add tooltips for camera settings.
  Bugfixes:
    - Fix (default) shortcut key sequence.
    - Make sure the zoom level is adjusted when resolution changes to keep the same area in the screenshots.
      Note: Be careful when to change resolution, as this will abort/mess up any smooth camera movement that is active!
    - Fix crash when camera information is (partially) missing.

---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 21-03-2021
  Bugfixes:
    - Do not take vehicles into account for base size calculation. (Thanks fortysixandtwo)

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 08-02-2021
  Features:
    - Configurable surface for each camera (when multiple surfaces are available).
      Hint: The 'Area Tracker' seems most suitable for small surfaces, as used in for example Factorissimo2.
    - Configurable surface for each tracker (when multiple surfaces are available).
    - Camera only uses trackers on same surface.
  Minor Features:
    - Add toggle/shortcut to pause all cameras.
