@@ -30,6 +30,7 @@ label-smooth=Smooth camera movement
 label-speedgain=Speed gain:
 label-top-right=Top/Right:
 label-type=Type:
+label-until-build=Follow until build
 label-zoom=Zoom:
 label-zoomperiod=Zoom period:
 item-add-tracker=<Add Tracker>
@@ -56,6 +57,7 @@ tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the cam
 tracker-area-map=Use map marker with name '__1__' to fill in this corner.
 tracker-area-player=Use player coordinates to fill in this corner.
 tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
+tracker-until-build=Follow the player until an entity is build.
 tracker-wrong-surface=Tracker is disabled because tracker surface differs from camera surface.
 
 [controls]
